# protokol

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep  21efa9e174bb_add_protocol_data_jsonb.py  35ccb446bd1f_add_contracts_people_org_fields.py  656a3c5ba51a_add_raci_accountable_constraint.py  cd9db7ed15ea_initial_schema.py
docs/: AI_INSTRUCTIONS.md  AI_SERVICES.md  API_CONTRACTS.md  ARCHITECTURE_STACK.md  DATABASE_SCHEMA.md  QA_TEST_PLAN.md  README_CONTEXT.md  ROADMAP_STATE.md  UI_COMPONENTS.md  USER_SCENARIOS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/ai/: AIPanel.tsx
frontend/src/components/protocol/: TabularProtocol.tsx
frontend/src/components/raci/: RACIGrid.tsx
frontend/src/components/tasks/: DependencyChain.tsx  TaskDetailModal.tsx
frontend/src/components/ui/: ApprovalStepper.tsx  ExportButtons.tsx  (+1 more)
frontend/src/pages/: Admin.tsx  Dashboard.tsx  Login.tsx  MeetingEditor.tsx
frontend/src/store/: authStore.ts  meetingStore.ts
frontend/src/types/: index.ts
src/: main.py
src/adapters/services/: __init__.py  ai_service.py  export_service.py  file_parser.py  import_.py  meeting_service.py  protocol_parser.py  raci_service.py  task_service.py
src/core/: enums.py
src/infrastructure/: auth.py  celery_app.py  config.py  database.py  dependencies.py  llm_gateway.py
tests/: conftest.py
(+27 files in other folders)
